--- a/build-vinil_qt-Desktop-Debug/Makefile
+++ b/build-vinil_qt-Desktop-Debug/Makefile
@@ -52,12 +52,12 @@ OBJECTS_DIR   = ./
 
 ####### Files
 
-SOURCES       = ../vinil_qt/TesteUserDAO.cpp \
-		../vinil_qt/cart.cpp \
+SOURCES       = ../vinil_qt/cart.cpp \
 		../vinil_qt/client.cpp \
 		../vinil_qt/dao_cart.cpp \
 		../vinil_qt/dao_client.cpp \
 		../vinil_qt/dao_music.cpp \
+		../vinil_qt/dao_newuser.cpp \
 		../vinil_qt/dao_purchase.cpp \
 		../vinil_qt/dao_vinyl.cpp \
 		../vinil_qt/data_source.cpp \
@@ -85,12 +85,12 @@ SOURCES       = ../vinil_qt/TesteUserDAO.cpp \
 		moc_screen_login.cpp \
 		moc_screen_new_account.cpp \
 		moc_screen_profile.cpp
-OBJECTS       = TesteUserDAO.o \
-		cart.o \
+OBJECTS       = cart.o \
 		client.o \
 		dao_cart.o \
 		dao_client.o \
 		dao_music.o \
+		dao_newuser.o \
 		dao_purchase.o \
 		dao_vinyl.o \
 		data_source.o \
@@ -270,12 +270,12 @@ DIST          = /usr/lib/qt/mkspecs/features/spec_pre.prf \
 		/usr/lib/qt/mkspecs/features/exceptions.prf \
 		/usr/lib/qt/mkspecs/features/yacc.prf \
 		/usr/lib/qt/mkspecs/features/lex.prf \
-		../vinil_qt/vinil_qt.pro ../vinil_qt/TesteUserDAO.h \
-		../vinil_qt/cart.h \
+		../vinil_qt/vinil_qt.pro ../vinil_qt/cart.h \
 		../vinil_qt/client.h \
 		../vinil_qt/dao_cart.h \
 		../vinil_qt/dao_client.h \
 		../vinil_qt/dao_music.h \
+		../vinil_qt/dao_newuser.h \
 		../vinil_qt/dao_purchase.h \
 		../vinil_qt/dao_vinyl.h \
 		../vinil_qt/data_source.h \
@@ -293,12 +293,12 @@ DIST          = /usr/lib/qt/mkspecs/features/spec_pre.prf \
 		../vinil_qt/vinyl.h \
 		../vinil_qt/common_client.h \
 		../vinil_qt/vip_client.h \
-		../vinil_qt/vip_purchase.h ../vinil_qt/TesteUserDAO.cpp \
-		../vinil_qt/cart.cpp \
+		../vinil_qt/vip_purchase.h ../vinil_qt/cart.cpp \
 		../vinil_qt/client.cpp \
 		../vinil_qt/dao_cart.cpp \
 		../vinil_qt/dao_client.cpp \
 		../vinil_qt/dao_music.cpp \
+		../vinil_qt/dao_newuser.cpp \
 		../vinil_qt/dao_purchase.cpp \
 		../vinil_qt/dao_vinyl.cpp \
 		../vinil_qt/data_source.cpp \
@@ -652,8 +652,8 @@ distdir: FORCE
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents ../vinil_qt/res.qrc $(DISTDIR)/
 	$(COPY_FILE) --parents /usr/lib/qt/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents ../vinil_qt/TesteUserDAO.h ../vinil_qt/cart.h ../vinil_qt/client.h ../vinil_qt/dao_cart.h ../vinil_qt/dao_client.h ../vinil_qt/dao_music.h ../vinil_qt/dao_purchase.h ../vinil_qt/dao_vinyl.h ../vinil_qt/data_source.h ../vinil_qt/mainwindow.h ../vinil_qt/music.h ../vinil_qt/purchase.h ../vinil_qt/screen_cart.h ../vinil_qt/screen_completed_purchase.h ../vinil_qt/screen_disc.h ../vinil_qt/screen_home.h ../vinil_qt/screen_login.h ../vinil_qt/screen_new_account.h ../vinil_qt/screen_profile.h ../vinil_qt/userteste.h ../vinil_qt/vinyl.h ../vinil_qt/common_client.h ../vinil_qt/vip_client.h ../vinil_qt/vip_purchase.h $(DISTDIR)/
-	$(COPY_FILE) --parents ../vinil_qt/TesteUserDAO.cpp ../vinil_qt/cart.cpp ../vinil_qt/client.cpp ../vinil_qt/dao_cart.cpp ../vinil_qt/dao_client.cpp ../vinil_qt/dao_music.cpp ../vinil_qt/dao_purchase.cpp ../vinil_qt/dao_vinyl.cpp ../vinil_qt/data_source.cpp ../vinil_qt/main.cpp ../vinil_qt/mainwindow.cpp ../vinil_qt/music.cpp ../vinil_qt/purchase.cpp ../vinil_qt/screen_cart.cpp ../vinil_qt/screen_completed_purchase.cpp ../vinil_qt/screen_disc.cpp ../vinil_qt/screen_home.cpp ../vinil_qt/screen_login.cpp ../vinil_qt/screen_new_account.cpp ../vinil_qt/screen_profile.cpp ../vinil_qt/userteste.cpp ../vinil_qt/vinyl.cpp ../vinil_qt/common_client.cpp ../vinil_qt/vip_client.cpp ../vinil_qt/vip_purchase.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents ../vinil_qt/cart.h ../vinil_qt/client.h ../vinil_qt/dao_cart.h ../vinil_qt/dao_client.h ../vinil_qt/dao_music.h ../vinil_qt/dao_newuser.h ../vinil_qt/dao_purchase.h ../vinil_qt/dao_vinyl.h ../vinil_qt/data_source.h ../vinil_qt/mainwindow.h ../vinil_qt/music.h ../vinil_qt/purchase.h ../vinil_qt/screen_cart.h ../vinil_qt/screen_completed_purchase.h ../vinil_qt/screen_disc.h ../vinil_qt/screen_home.h ../vinil_qt/screen_login.h ../vinil_qt/screen_new_account.h ../vinil_qt/screen_profile.h ../vinil_qt/userteste.h ../vinil_qt/vinyl.h ../vinil_qt/common_client.h ../vinil_qt/vip_client.h ../vinil_qt/vip_purchase.h $(DISTDIR)/
+	$(COPY_FILE) --parents ../vinil_qt/cart.cpp ../vinil_qt/client.cpp ../vinil_qt/dao_cart.cpp ../vinil_qt/dao_client.cpp ../vinil_qt/dao_music.cpp ../vinil_qt/dao_newuser.cpp ../vinil_qt/dao_purchase.cpp ../vinil_qt/dao_vinyl.cpp ../vinil_qt/data_source.cpp ../vinil_qt/main.cpp ../vinil_qt/mainwindow.cpp ../vinil_qt/music.cpp ../vinil_qt/purchase.cpp ../vinil_qt/screen_cart.cpp ../vinil_qt/screen_completed_purchase.cpp ../vinil_qt/screen_disc.cpp ../vinil_qt/screen_home.cpp ../vinil_qt/screen_login.cpp ../vinil_qt/screen_new_account.cpp ../vinil_qt/screen_profile.cpp ../vinil_qt/userteste.cpp ../vinil_qt/vinyl.cpp ../vinil_qt/common_client.cpp ../vinil_qt/vip_client.cpp ../vinil_qt/vip_purchase.cpp $(DISTDIR)/
 	$(COPY_FILE) --parents ../vinil_qt/mainwindow.ui ../vinil_qt/screen_cart.ui ../vinil_qt/screen_completed_purchase.ui ../vinil_qt/screen_disc.ui ../vinil_qt/screen_home.ui ../vinil_qt/screen_login.ui ../vinil_qt/screen_new_account.ui ../vinil_qt/screen_profile.ui $(DISTDIR)/
 
 
@@ -802,10 +802,6 @@ compiler_clean: compiler_rcc_clean compiler_moc_predefs_clean compiler_moc_heade
 
 ####### Compile
 
-TesteUserDAO.o: ../vinil_qt/TesteUserDAO.cpp ../vinil_qt/data_source.h \
-		../vinil_qt/TesteUserDAO.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o TesteUserDAO.o ../vinil_qt/TesteUserDAO.cpp
-
 cart.o: ../vinil_qt/cart.cpp ../vinil_qt/cart.h \
 		../vinil_qt/client.h \
 		../vinil_qt/vinyl.h \
@@ -835,6 +831,10 @@ dao_music.o: ../vinil_qt/dao_music.cpp ../vinil_qt/dao_music.h \
 		../vinil_qt/data_source.h \
 		../vinil_qt/music.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o dao_music.o ../vinil_qt/dao_music.cpp
+
+dao_newuser.o: ../vinil_qt/dao_newuser.cpp ../vinil_qt/dao_newuser.h \
+		../vinil_qt/data_source.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o dao_newuser.o ../vinil_qt/dao_newuser.cpp
 
 dao_purchase.o: ../vinil_qt/dao_purchase.cpp ../vinil_qt/dao_purchase.h \
 		../vinil_qt/data_source.h \
@@ -958,7 +958,7 @@ screen_login.o: ../vinil_qt/screen_login.cpp ../vinil_qt/screen_login.h \
 
 screen_new_account.o: ../vinil_qt/screen_new_account.cpp ../vinil_qt/screen_new_account.h \
 		ui_screen_new_account.h \
-		../vinil_qt/TesteUserDAO.h
+		../vinil_qt/dao_newuser.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o screen_new_account.o ../vinil_qt/screen_new_account.cpp
 
 screen_profile.o: ../vinil_qt/screen_profile.cpp ../vinil_qt/screen_profile.h \
